# unitree_control

./: .gitignore
src/fig/: README.md  doubao_box_detector.py
src/g1_arm_control/: CMakeLists.txt  package.xml
src/g1_arm_control/scripts/: g1_29_model_cache.pkl  g1_right_arm_control_moduan.py  test_g1_29_arm_ik_visual.py
src/g1_arm_control/src/: g1_29_arm_ik.py  g1_arm_ik.py  g1_right_arm_example.cpp  g1_right_arm_example.cpp.txt  g1_right_arm_example_abs.cpp  g1_right_arm_example_没加abs之前.cpp  g1_right_arm_example（复件）.cpp
